@@ -1,5 +1,5 @@
 !https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-logo.png!
 
-Pipes is a "dataflow":http://en.wikipedia.org/wiki/Dataflow framework written in Java that enables the splitting, merging, filtering, and transformation of data from input to output. Computations are expressed using a "combinator":http://en.wikipedia.org/wiki/Function_composition model and are evaluated in a memory-efficient, "lazy":http://en.wikipedia.org/wiki/Lazy_evaluation fashion. Pipes provides specific support for traversing "Blueprints":http://blueprints.tinkerpop.com enabled "graph databases":http://en.wikipedia.org/wiki/Graph_database. As such, it can be used as a foundation for graph-based query/traversal languages.
+Pipes is a "dataflow":http://en.wikipedia.org/wiki/Dataflow framework that enables the splitting, merging, filtering, and transformation of data from input to output. Computations are expressed using a "combinator":http://en.wikipedia.org/wiki/Function_composition model and are evaluated in a memory-efficient, "lazy":http://en.wikipedia.org/wiki/Lazy_evaluation fashion.
 
 The documentation for Pipes can be found at this "location":http://pipes.tinkerpop.com. Finally, please visit "TinkerPop":http://tinkerpop.com for other software products.
